unpackaged/main/default/objects/n2de__History__c/n2de__History__c.object-meta.xml
<CustomObject>
    <label>History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>