unpackaged/main/default/objects/n2de__History__c/fields/n2de__Change_datetime__c.field-meta.xml
<CustomField>
    <fullName>n2de__Change_datetime__c</fullName>
    <label>Change datetime</label>
    <type>DateTime</type>
</CustomField>