unpackaged/main/default/objects/n2de__History__c/fields/n2de__Change_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Change_type__c</fullName>
    <inlineHelpText>Change type e.g. update, add, remove</inlineHelpText>
    <label>Change type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>