unpackaged/main/default/objects/n2de__History__c/fields/n2de__Field__c.field-meta.xml
<CustomField>
    <fullName>n2de__Field__c</fullName>
    <inlineHelpText>Field whose value was altered.</inlineHelpText>
    <label>Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>