unpackaged/main/default/objects/n2de__History__c/fields/n2de__New_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__New_value__c</fullName>
    <inlineHelpText>Value of the field after change.</inlineHelpText>
    <label>New value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>