unpackaged/main/default/objects/n2de__History__c/fields/n2de__Object__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object__c</fullName>
    <inlineHelpText>Name of DE object this edit was for.</inlineHelpText>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>