unpackaged/main/default/objects/n2de__History__c/fields/n2de__Object_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_id__c</fullName>
    <inlineHelpText>Id of edited object.</inlineHelpText>
    <label>Object id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>