unpackaged/main/default/objects/n2de__History__c/fields/n2de__Old_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Old_value__c</fullName>
    <inlineHelpText>Previous value of the field.</inlineHelpText>
    <label>Old value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>