unpackaged/main/default/objects/n2de__History__c/fields/n2de__Parent_change_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Parent_change_id__c</fullName>
    <inlineHelpText>Id of the parent object this change was part of.</inlineHelpText>
    <label>Parent change id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>