unpackaged/main/default/objects/n2de__History__c/fields/n2de__Parent_object__c.field-meta.xml
<CustomField>
    <fullName>n2de__Parent_object__c</fullName>
    <inlineHelpText>Type of the parent object this change was part of.</inlineHelpText>
    <label>Parent object type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>