unpackaged/main/default/objects/n2de__History__c/fields/n2de__Parent_record_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Parent_record_name__c</fullName>
    <inlineHelpText>Name of the parent record this change is related to.</inlineHelpText>
    <label>Record name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>