unpackaged/main/default/objects/n2de__History__c/fields/n2de__User_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__User_id__c</fullName>
    <inlineHelpText>Id of the user if this change relates to a user.</inlineHelpText>
    <label>User id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>